testsuite/tests/parser/should_fail/readFail047.stderr

readFail047.hs:6:5: error: [GHC-58481]
    Parse error (possibly incorrect indentation or mismatched brackets).
    Expected one of ')'
